--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -6,35 +6,40 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:padding="8dp">
 
-        <ImageView
+        <!-- Circular Image View  -->
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/thumbnailUrl"
             android:src="@mipmap/ic_launcher"
-            android:layout_width="60dp"
-            android:layout_height="60dp" />
+            android:layout_width="70dp"
+            android:layout_height="70dp"/>
 
         <TextView
             android:id="@+id/name"
             android:text="@string/name"
-            android:textSize="20sp"
-            android:layout_marginTop="6dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:layout_marginTop="10dp"
             android:maxLines="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/thumbnailUrl"
-            android:layout_marginStart="10dp" />
+            android:layout_marginStart="12dp" />
 
         <TextView
             android:id="@+id/country"
             android:text="@string/country"
-            android:textSize="14sp"
+            android:textSize="12sp"
+            android:textColor="@color/black"
             android:maxLines="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/name"
             android:layout_alignStart="@+id/name" />
+
     </RelativeLayout>
 
 </RelativeLayout>
