--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -1,45 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    app:cardBackgroundColor="@color/cardview_dark_background"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="8dp"
+    app:cardMaxElevation="10dp"
+    app:cardPreventCornerOverlap="true"
+    app:cardUseCompatPadding="false">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:layout_height="wrap_content">
 
         <!-- Circular Image View  -->
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/thumbnailUrl"
-            android:src="@mipmap/ic_launcher"
-            android:layout_width="70dp"
-            android:layout_height="70dp"/>
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_margin="10dp"
+            android:contentDescription="@string/app_name"
+            android:padding="5dp"
+            android:src="@mipmap/ic_launcher" />
 
+        <!-- Text View to display Name -->
         <TextView
             android:id="@+id/name"
-            android:text="@string/name"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:layout_marginTop="10dp"
-            android:maxLines="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/thumbnailUrl"
-            android:layout_marginStart="12dp" />
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_toEndOf="@id/thumbnailUrl"
+            android:text="@string/name"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/white" />
 
+        <!-- Text VIew to display Country -->
         <TextView
             android:id="@+id/country"
-            android:text="@string/country"
-            android:textSize="12sp"
-            android:textColor="@color/black"
-            android:maxLines="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/name"
-            android:layout_alignStart="@+id/name" />
-
+            android:layout_below="@id/name"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/thumbnailUrl"
+            android:text="@string/country" />
     </RelativeLayout>
-
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
