--- a/app/src/main/res/layout/activity_custom_list.xml
+++ b/app/src/main/res/layout/activity_custom_list.xml
@@ -16,6 +16,7 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/thumbnailUrl"
+            android:src="@mipmap/ic_launcher_round"
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:padding="10dp" />
@@ -31,6 +32,7 @@
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@color/black" />
+
         <TextView
             android:id="@+id/country"
             android:layout_below="@id/name"
