--- a/app/src/main/res/layout/activity_custom_list.xml
+++ b/app/src/main/res/layout/activity_custom_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,19 +9,16 @@
     app:cardUseCompatPadding="true"
     app:cardCornerRadius="5dp"
     app:cardElevation="2dp">
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/thumbnailUrl"
             android:src="@mipmap/ic_launcher_round"
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:padding="10dp" />
-
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
@@ -32,7 +30,6 @@
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@color/black" />
-
         <TextView
             android:id="@+id/country"
             android:layout_below="@id/name"
@@ -41,5 +38,4 @@
             android:layout_marginStart="10dp"
             android:layout_toEndOf="@id/thumbnailUrl" />
     </RelativeLayout>
-
 </androidx.cardview.widget.CardView>
