--- a/app/src/main/res/layout/activity_custom_list.xml
+++ b/app/src/main/res/layout/activity_custom_list.xml
@@ -11,7 +11,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/parent_layout">
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/thumbnailUrl"
             android:src="@mipmap/ic_launcher_round"
