--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
@@ -8,37 +9,41 @@
     android:orientation="vertical"
     android:weightSum="100"
     tools:context=".ProfileActivity">
-
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="50"
+        android:layout_weight="80"
         android:id="@+id/thumbnailUrl"
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher"
         android:background="@color/colorPrimary"
         android:padding="40dp"
-        app:civ_border_width="3dp"
+        app:civ_border_width="2dp"
         app:civ_border_color="@color/white" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/name"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="30dp"
         android:text="@string/name"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:textColor="@color/black" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/country"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="10dp"
         android:text="@string/country"
         android:textSize="15sp" />
-
+    <ImageView
+        android:id="@+id/streetfighter"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/streetfighter_logo"
+        android:layout_gravity="center"
+        android:contentDescription="@string/app_name"
+        android:layout_marginTop="30dp" />
 </LinearLayout>
