--- a/app/src/main/res/layout/activity_create_fighter.xml
+++ b/app/src/main/res/layout/activity_create_fighter.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_marginTop="40dp"
+        android:layout_marginVertical="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
