--- a/app/src/main/res/layout/activity_edit_fighter.xml
+++ b/app/src/main/res/layout/activity_edit_fighter.xml
@@ -5,11 +5,11 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UpdateFighterActivity">
+    tools:context=".EditFighterActivity">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_marginTop="40dp"
+        android:layout_marginVertical="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
