--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -1,28 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="@color/cardview_light_background"
+    android:orientation="horizontal"
+    app:cardUseCompatPadding="true"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="2dp">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imgThumbnailUrl"
-        android:src="@mipmap/ic_launcher_round"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:padding="10dp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/name"
-        android:id="@+id/txtName"
-        android:padding="10dp" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imgThumbnailUrl"
+            android:src="@mipmap/ic_launcher_round"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:gravity="center_vertical"
+            android:padding="10dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/country"
-        android:id="@+id/txtCountry"
-        android:padding="10dp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toEndOf="@id/imgThumbnailUrl"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/name"
+            android:textAppearance="?android:attr/textAppearanceListItem"
+            android:textStyle="bold"
+            android:id="@+id/txtName" />
 
-</LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toEndOf="@id/imgThumbnailUrl"
+            android:layout_marginStart="10dp"
+            android:gravity="center_vertical"
+            android:layout_below="@+id/txtName"
+            android:text="@string/country"
+            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
+            android:id="@+id/txtCountry" />
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
