--- a/app/src/main/res/layout/activity_create_fighter.xml
+++ b/app/src/main/res/layout/activity_create_fighter.xml
@@ -1,44 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".CreateFighterActivity">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_marginVertical="20dp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:layout_marginTop="100dp"
+        android:text="@string/add_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:text="@string/add_title" />
+        android:layout_gravity="center"/>
+
+    <TextView
+        android:id="@+id/txtName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/name"/>
 
     <EditText
         android:id="@+id/edtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/textView"
-        android:hint="@string/name" />
+        android:layout_marginStart="100dp"
+        android:ems="10"/>
+
+    <TextView
+        android:id="@+id/txtCountry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/country"
+        android:layout_marginStart="100dp" />
 
     <EditText
         android:id="@+id/edtCountry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/edtName"
-        android:hint="@string/country" />
+        android:layout_marginStart="100dp"
+        android:ems="10" />
 
     <Button
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/edtCountry"
+        android:layout_marginStart="100dp"
         android:text="@string/save" />
-
-</RelativeLayout>
+</LinearLayout>
