--- a/app/src/main/res/layout/activity_edit_fighter.xml
+++ b/app/src/main/res/layout/activity_edit_fighter.xml
@@ -1,51 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".EditFighterActivity">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_marginVertical="20dp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:layout_marginTop="100dp"
+        android:text="@string/update_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:text="@string/update_title" />
+        android:layout_gravity="center"/>
+
+    <TextView
+        android:id="@+id/txtName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/name"/>
 
     <EditText
         android:id="@+id/edtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/textView"
-        android:hint="@string/name" />
+        android:layout_marginStart="100dp"
+        android:ems="10"/>
+
+    <TextView
+        android:id="@+id/txtCountry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/country"
+        android:layout_marginStart="100dp" />
 
     <EditText
         android:id="@+id/edtCountry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/edtName"
-        android:hint="@string/country" />
+        android:layout_marginStart="100dp"
+        android:ems="10" />
 
-    <Button
-        android:id="@+id/btnUpdate"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="198dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/edtCountry"
-        android:text="@string/update" />
+        android:layout_gravity="center"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btnUpdate"
-        android:text="@string/delete" />
+        <Button
+            android:id="@+id/btnUpdate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginEnd="1dp"
+            android:text="@string/update"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white" />
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="1dp"
+            android:text="@string/delete"
+            android:textColor="@color/white"
+            android:background="@color/colorAccent" />
+    </LinearLayout>
+</LinearLayout>
