Detalhes do lutador

--- a/app/src/main/res/layout/activity_edit_fighter.xml
+++ b/app/src/main/res/layout/activity_edit_fighter.xml
@@ -63,7 +63,7 @@
             android:textColor="@color/white" />
 
         <Button
-            android:id="@+id/btnDelete"
+            android:id="@+id/btnEdit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
